--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -1,50 +1,20 @@
-name: npm test
+name: Deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
-
-  test:
-
+  build:
     runs-on: ubuntu-latest
-
-    strategy:
-
-      matrix:
-
-        node_version: [12.x]
-
     steps:
-
       - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-
-        uses: actions/setup-node@v1
-
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
+          heroku_email: "YOUR EMAIL"
 
-          node-version: ${{ matrix.node-version }}
-
-      - run: npm install
-
-      - run: npm run build --if-present
-
-      - run: npm test
-        env:
-       CI: true
-      deploy:
-      needs: build
-      runs-on: ubuntu-latest
-      steps:
-      - uses: actions/checkout@master
-      - uses: jakejarvis/s3-sync-action@master
-      with:
-      args: --acl public-read --follow-symlinks --delete
-      env:
-      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS.ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: "us-east-1" # optional: defaults to us-east-1
 
     
