--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -1,36 +1,4 @@
-name: npm test
 
-on: [push]
-
-jobs:
-
-  test:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-
-      matrix:
-
-        node_version: [12.x]
-
-    steps:
-
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-
-        uses: actions/setup-node@v1
-
-        with:
-
-          node-version: ${{ matrix.node-version }}
-
-      - run: npm install
-
-      - run: npm run build --if-present
-
-      - run: npm test
       
 name: Deploy
 
@@ -47,8 +15,8 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
+          heroku_app_name: "james-heangboonefullstackbank" #Must be unique in Heroku
+          heroku_email: "nitiwat_w@yahoo.com"
 
 
     
